# braintbit

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeLists.txt.orig2  deps  main.cc  main_brainbit.cpp  main_brainbit_filters.cpp  main_scanner.cpp
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  example  fff
libs/brainbitsdk/: CMakeLists.txt  brainbit.cpp  brainbit.h  brainbit_callback.cpp  brainbit_em_st_artifacts.cpp  brainbit_filters.cpp  brainbit_info.cpp  brainbit_settings.cpp  brainbit_spectrum.cpp  brainbit_supported_functional.cpp  cmn_type.h  common_api_spect.h  em_st_artifacts_common_api.h  f_types.h  filters.h  filtersLib.cpp  filtersLib.h  main_brainbit_em_st_artifacts.h  sdk_api.h  signalCallback.h
libs/dependencies/: libblkid.so.1  libc++.so.1  libc++abi.so.1  libffi.so.6  libgcc_s.so.1  libgio-2.0.so.0  libglib-2.0.so.0  libgobject-2.0.so.0  libmount.so.1  libpcre.so.3  libselinux.so.1  libudev.so.1  libuuid.so.1
libs/includes/: common_api.h  lib_export.h  log.cpp  log.h  main_brainbit.h  main_filters.h  main_scanner.h  mathLib.cpp  mathLib.h  signalCallback_filters.h  spectrumLib.h
libs/scanner/: scanner.cpp  scanner.h  sensorsCallback.h
